Bug 396358 - Color picking from Reference Image with 0% opacity works unexpected
Summary: Color picking from Reference Image with 0% opacity works unexpected
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: joupent
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-10 07:45 UTC by Dmitry Kazakov
Modified: 2018-07-11 08:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2018-07-10 07:45:23 UTC
NOTE: this bug is different from bug 396144

1) Create a new image
2) Add a reference image
3) Set reference image opacity to 0%
4) Switch to the brush tool and try to Ctrl+Click from this area: the color is still correctly picked, although the reference is completely invisible.

This behavior is rather confusing (we've got a report about that), I guess the painters would expect the following behavior:

1) When Opacity is 1%--100%, pick the color at full opacity of the image, without merging in this opacity into the final color.

2) When Opacity is 0%, consider it as "hidden" and don't pick color from it at all.
Comment 1 joupent 2018-07-10 13:38:40 UTC
Git commit 468643b66f1f06cf6c80a7e2493fb63b6ccf9ec6 by Jouni Pentikäinen.
Committed on 10/07/2018 at 13:35.
Pushed by jounip into branch 'master'.

Don't pick color from fully transparent reference images

M  +2    -0    libs/ui/KisReferenceImage.cpp

https://commits.kde.org/krita/468643b66f1f06cf6c80a7e2493fb63b6ccf9ec6
Comment 2 Halla Rempt 2018-07-11 08:12:43 UTC
Git commit b1c498e5ce80c5dc492211a91913944248e5d55e by Boudewijn Rempt, on behalf of Jouni Pentikäinen.
Committed on 11/07/2018 at 08:11.
Pushed by rempt into branch 'krita/4.1'.

Don't pick color from fully transparent reference images

M  +2    -0    libs/ui/KisReferenceImage.cpp

https://commits.kde.org/krita/b1c498e5ce80c5dc492211a91913944248e5d55e