Don't pick color from fully transparent reference images

BUG: 396358